--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -14,18 +14,18 @@
     </head>
     <body>
         <header class="header">
-            <div class="logo-box">
-                <img class="logo" src="./img/logo-white.png" alt="logo">
+            <div class="header__logo-box">
+                <img class="header__logo" src="./img/logo-white.png" alt="logo">
             </div>
 
-            <div class="text-box">
+            <div class="header__text-box">
                 <h1 class="heading-primary">
-                    <span class="heading-primary-main">outdoors</span>
-                    <span class="heading-primary-sub">is where life happens</span>
+                    <span class="heading-primary--main">outdoors</span>
+                    <span class="heading-primary--sub">is where life happens</span>
                 </h1>
                 
                 <div>
-                    <a href="#"" class="btn btn-white btn-animated">discover our tours</a>
+                    <a href="#"" class="btn btn--white btn--animated">discover our tours</a>
                 </div>
             </div>
         </header>
