--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <!-- needed for responsive design -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
 
         <!-- 
             <link rel="stylesheet" href="css/icon-font.css"> 
-            *included in style.css
+            uncomment for development
         -->
 
         <link rel="stylesheet" href="css/style.css">
